--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <div class="figure" id="cabinet"></div>
   <div class="main">
     <div>
-      <p>Médecin de santé publique, je vous accompagne également pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.</p>
-      <p>J’exerce en psychothérapie intégrative (<a href="https://www.indigo-formations.fr" target="_blank" style="text-decoration: none">Indigo Formation</a>), une approche qui épouse aspects émotionnels, sexuels, spirituels et existentiels. Ma démarche thérapeutique s’inspire aussi du chant, de la danse et des arts visuels.</p>
-      <p>Grâce à un environnement bienveillant, de solides formations et un choix diversifié de pratiques, dont la sexothérapie et la gestalt thérapie, je vous reçois pour des suivis -- brefs ou longs -- qui vous conduiront à davantage d’autonomie et de liberté.</p>
+      <p>Praticienne en psychothérapie exerçant également en tant que médecin de santé publique, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.</p>
+      <p>J’exerce en psychothérapie intégrative (<a href="https://www.indigo-formations.fr" target="_blank" style="text-decoration: none">Indigo Formation</a>), une approche qui aborde les aspects émotionnels, sexuels, spirituels et existentiels. Ma démarche thérapeutique s’inspire aussi du chant, de la danse et des arts visuels.</p>
+      <p>Je dispose de solides formations dont la sexothérapie et la gestalt thérapie et d'un choix diversifié de pratiques permettant de mobiliser vos ressources afin d'y puiser des réponses.</p>
+      <p>Je vous reçois dans un environnement bienveillant pour des suivis brefs ou longs qui vous conduiront à davantage d’autonomie et de liberté.</p>
     </div>
   </div>
   <div class="figure" id="arlette"></div>
