--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
     <p><a href="mailto:danzon.psy@gmail.com" target="_blank" style="text-decoration: none">Écrivez-moi</a> pour prendre rendez-vous</p>
   </div>
   </div>
+  <div id="map">
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1wvgLQfldUmUTnWo4fmFLznYeY8v4eLRl" width="100%" height="480"></iframe>
+  </div>
   <div class="footer">
-    <div class="address">
-      <ul>Arlette Danzon</ul>
-      <ul>Psychothérapie intégrative et sexothérapie</ul>
-      <ul>Métro Charenton - Écoles, ligne 8</ul>
-      <ul>Bus 111, 325 et 24</ul>
-    </div>
-    <div class="logo" id="logo"></div>
   </div>
 </body>
