--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="figure" id="cabinet"></div>
   <div class="main">
     <div>
-      <p>Praticienne en psychothérapie exerçant également en tant que médecin de santé publique, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.</p>
+      <p>Praticienne en psychothérapie à Saint-Maurice, près de Paris, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.</p>
       <p>J’exerce en psychothérapie intégrative (<a href="https://www.indigo-formations.fr" target="_blank" style="text-decoration: none">Indigo Formation</a>), une approche qui aborde les aspects émotionnels, sexuels, spirituels et existentiels. Ma démarche thérapeutique s’inspire aussi du chant, de la danse et des arts visuels.</p>
       <p>Je dispose de solides formations dont la sexothérapie et la gestalt thérapie et d'un choix diversifié de pratiques permettant de mobiliser vos ressources afin d'y puiser des réponses.</p>
     </div>
