--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="section2">
     <div>
     <p><a href="mailto:danzon.psy@gmail.com" target="_blank" style="text-decoration: none">Écrivez-moi</a> pour prendre rendez-vous</p>
+    <p>Ou téléphonez-moi au 07 69 56 16 02.<p>  
   </div>
   </div>
   <div id="map">
