--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class="section2">
     <div>
-    <p><a href="mailto:danzon.psy@gmail.com" target="_blank" style="text-decoration: none">Écrivez-moi</a> pour prendre rendez-vous</p>
+    <p>Écrivez-moi à <a href="mailto:danzon.psy@gmail.com" target="_blank" style="text-decoration: none">danzon.psy@gmail.com</a> pour prendre rendez-vous</p>
     <p>Ou téléphonez-moi au 07 69 56 16 02.<p>
     </br>
   </div>
