--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
 <head>
   <title>Arlette Danzon</title>
+  <link rel="icon" type="image/jpg" href="./Photos/logo.png"/>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="CSS/index.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet">
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:title" property="og:title" content="Arlette Danzon -- Psychothérapie & Sexothérapie"/>
+  <meta name="twitter:description" property="og:description" content="Praticienne en psychothérapie à Saint-Maurice, près de Paris, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie." />
+  <meta name="twitter:image" property="og:image" content="http://arlettedanzon.com/Photos/Arlette-2.jpg"/>
+  <meta property="og:url" content= "http://arlettedanzon.com/"/>
 </head>
 <body>
-  <div class="nav">
-    <div class="header">
-      <h3></h3>
-      <p></p>
+  <div class="grid">
+    <div class="card" id="card1">
+        <div class="subcard" id="subcard1">
+          <img src="./Photos/Arlette-2.jpg" width=425 height=300>
+        </div>
+        <div class="subcard" id="subcard2">
+          <h3>Arlette Danzon</h3>
+          <p>Psychothérapie & Sexothérapie <p>
+          <a id="email" target="_blank" style="color: black" href="mailto:danzon.psy@gmail.com"><i class="fa fa-envelope" style="font-size:1.5em"></i></a>&nbsp;&nbsp;
+          <a id="linkedin" target="_blank" style="color: black" href="https://www.linkedin.com/in/arlette-danzon-4a807989/"><i class="fa fa-linkedin-square" aria-hidden="true" style="font-size:1.5em"></i></a>&nbsp;&nbsp;
+          <a id="phone" target="_blank" style="color: black" href="tel:+33769561602"><i class="fa fa-phone-square" style="font-size:1.5em"></i></a>
+        </div>
+        <div class="subcard" id="subcard3"></div>
+      </div>
+      <div class="card" id="card2">
+          <div class="subcard" id="subcard4"></div>
+      </div>
+      <div class="card" id="card3">
+          <div class="subcard" id="subcard5">
+            <h3>Qui suis-je ?</h3>
+            <p>Praticienne en psychothérapie à Saint-Maurice, près de Paris, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.<p>
+            <p>J’exerce en psychothérapie intégrative (<a target="_blank" style="color: #1d1e80; text-decoration: none" href="https://www.indigo-formations.fr/">Indigo Formation</a>), une approche qui aborde les aspects émotionnels, sexuels, spirituels et existentiels. Ma démarche thérapeutique s’inspire aussi du chant, de la danse et des arts visuels.<p>
+            <p>Je dispose de solides formations dont la sexothérapie et la gestalt thérapie et d'un choix diversifié de pratiques permettant de mobiliser vos ressources afin d'y puiser des réponses.<p>
+          </div>
+      </div>
+      <div class="card" id="card4">
+          <div class="subcard" id="subcard6">
+            <h3>Motifs de consultation :</h3>
+            <ul>
+              <li>souffrance relationnelle, solitude,</li>
+              <li>peurs, angoisses,</li>
+              <li>troubles du désir, de la sexualité,</li>
+              <li>comportements addictifs...</li>
+            </ul>
+          </div>
+          <div class="subcard" id="subcard7">
+            <h3>✆ 07 69 56 16 02</h3>
+          </div>
+      </div>
+      <div class="card" id="card5">
+          <div class="subcard" id="subcard8">
+            <h3>Mon parcours :</h3>
+            <p>Après avoir obtenu mon dipôme de médecin à Toulouse, je me suis d'abord spécialisée en pédiatrie, puis cap sur Montréal pour étudier la santé publique.</p>
+            <p>J'ai ensuite enseigné à l'<a target="_blank" style="color: #1d1e80; text-decoration: none" href="https://www.ehesp.fr/">École des hautes études en santé publique</a>, à Rennes, puis dirigé le <a target="_blank" style="color: #1d1e80; text-decoration: none" href="https://www.chu-besancon.fr/la-recherche/les-acteurs-de-la-recherche-au-chru/registre-des-tumeurs-du-doubs.html">Registre des tumeurs du Doubs</a>, à Besançon.</p>
+            <p>Responsable de l'unité cancer à <a target="_blank" style="color: #1d1e80; text-decoration: none" href="https://www.santepubliquefrance.fr/">Santé publique France</a> jusqu'en 2013, je suis revenue vers la petite enfance en tant qu'experte à la <a target="_blank" style="color: #1d1e80; text-decoration: none" href="https://www.paris.fr/petite-enfance">PMI de Paris</a>.</p>
+            <p>Je me suis entre-temps formée en psychothérapie intégrative ; je l'exerce à présent en étant supervisée.</p>
+          </div>
+      </div>
+      <div class="card" id="card6">
+          <div class="subcard" id="subcard9">
+            <p><img src="./Photos/logo.png" width=175 height=250></p>
+          </div>
+      </div>
     </div>
-  </div>
-  <div class="figure" id="cabinet"></div>
-  <div class="main">
-    <div>
-      <p>Praticienne en psychothérapie à Saint-Maurice, près de Paris, je vous accompagne pour des questionnements ou des difficultés en lien avec la sexualité, le désir, l’amour, les émotions, ou toutes autres entraves à la fluidité de la vie.</p>
-      <p>J’exerce en psychothérapie intégrative (<a href="https://www.indigo-formations.fr" target="_blank" style="text-decoration: none">Indigo Formation</a>), une approche qui aborde les aspects émotionnels, sexuels, spirituels et existentiels. Ma démarche thérapeutique s’inspire aussi du chant, de la danse et des arts visuels.</p>
-      <p>Je dispose de solides formations dont la sexothérapie et la gestalt thérapie et d'un choix diversifié de pratiques permettant de mobiliser vos ressources afin d'y puiser des réponses.</p>
-    </div>
-  </div>
-  <div class="figure" id="arlette"></div>
-  <div class="about">
-    <div>
-      <h4><i>Mon parcours</i></h4>
-      <p>Après avoir obtenu mon dipôme de médecin à Toulouse, je me suis d'abord spécialisée en pédiatrie, puis cap sur Montréal pour étudier la santé publique.</p>
-      <p>J'ai ensuite enseigné à <a href="https://www.ehesp.fr/" target="_blank" style="text-decoration: none">l'École des hautes études en santé publique</a>, à Rennes, puis dirigé le <a href="https://www.chu-besancon.fr/la-recherche/les-acteurs-de-la-recherche-au-chru/registre-des-tumeurs-du-doubs-et-du-territoire-de-belfort.html" target="_blank" style="text-decoration: none">Registre des tumeurs du Doubs</a>, à Besançon.</p>
-      <p>Responsable de l'unité cancer à <a href="https://santepubliquefrance.fr/" target="_blank" style="text-decoration: none">Santé publique France</a> jusqu'en 2013, je suis revenue vers la petite enfance en tant qu'experte <a href="https://www.paris.fr/petite-enfance" target="_blank" style="text-decoration: none">à la PMI de Paris</a>.</p>
-      <p>Je me suis entre-temps formée en psychothérapie intégrative ; je l'exerce à présent en étant supervisée.</p>
-    </div>
-  </div>
-  <div class="section2">
-    <div>
-    <p>Écrivez-moi à <a href="mailto:danzon.psy@gmail.com" target="_blank" style="text-decoration: none">danzon.psy@gmail.com</a></p>
-    <p>Ou téléphonez-moi au 07 69 56 16 02.<p>
-    </br>
-  </div>
-  </div>
-  <div id="map">
-   <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1wvgLQfldUmUTnWo4fmFLznYeY8v4eLRl" width="100%" height="480"></iframe>
-  </div>
-  <div class="footer">
-  </div>
 </body>
