--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="subcard" id="subcard2">
           <h3>Arlette Danzon</h3>
           <p>Psychothérapie & Sexothérapie <p>
-          <a id="email" target="_blank" style="color: black" href="mailto:danzon.psy@gmail.com"><i class="fa fa-envelope" style="font-size:1.5em"></i></a>&nbsp;&nbsp;
-          <a id="linkedin" target="_blank" style="color: black" href="https://www.linkedin.com/in/arlette-danzon-4a807989/"><i class="fa fa-linkedin-square" aria-hidden="true" style="font-size:1.5em"></i></a>&nbsp;&nbsp;
-          <a id="phone" target="_blank" style="color: black" href="tel:+33769561602"><i class="fa fa-phone-square" style="font-size:1.5em"></i></a>
+          <a id="email" target="_blank" style="color: black" href="mailto:danzon.psy@gmail.com"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+          <a id="linkedin" target="_blank" style="color: black" href="https://www.linkedin.com/in/arlette-danzon-4a807989/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp;&nbsp;
+          <a id="phone" target="_blank" style="color: black" href="tel:+33769561602"><i class="fa fa-phone-square"></i></a>
         </div>
         <div class="subcard" id="subcard3"></div>
       </div>
