--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="grid">
     <div class="card" id="card1">
         <div class="subcard" id="subcard1">
-          <img src="./Photos/Arlette-2.jpg" width=425 height=300>
+          <img src="./Photos/arlette_photo_maj.jpg" width=425 height=300>
         </div>
         <div class="subcard" id="subcard2">
           <h3>Arlette Danzon</h3>
