--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta name="twitter:image" property="og:image" content="http://arlettedanzon.com/Photos/Arlette-2.jpg"/>
   <meta property="og:url" content= "http://arlettedanzon.com/"/>
 </head>
-<body>
+Site en construction. Merci pour votre patience.
+<! –– <body>
   <div class="grid">
     <div class="card" id="card1">
         <div class="subcard" id="subcard1">
@@ -68,4 +69,4 @@
           </div>
       </div>
     </div>
-</body>
+</body> ––>
