--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content= "http://arlettedanzon.com/"/>
 </head>
 Site en construction. Merci pour votre patience.
-<! –– <body>
+<!--<body>
   <div class="grid">
     <div class="card" id="card1">
         <div class="subcard" id="subcard1">
@@ -69,4 +69,4 @@ Site en construction. Merci pour votre patience.
           </div>
       </div>
     </div>
-</body> ––>
+</body>-->
